<RelativeLayout
    style="@style/AuthBackground"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.khackett.runmate.ui.SignUpActivity">

    <ImageView
        android:id="@+id/backgroundImage"
        style="@style/AuthenticationBackgroundImage"
        android:contentDescription="@string/content_description_background"/>

    <TextView
        android:id="@+id/title"
        style="@style/AuthenticationTitle"/>

    <TextView
        android:id="@+id/subtitle"
        style="@style/AuthenticationTitle.AuthenticationSubTitle"/>


    <LinearLayout
        android:id="@+id/editTextLayout"
        style="@style/AuthenticationFieldContainer">

        <EditText
            android:id="@+id/usernameField"
            style="@style/AuthenticationEditText"
            android:hint="@string/username_hint">

            <requestFocus/>
        </EditText>

        <EditText
            android:id="@+id/passwordField"
            style="@style/AuthenticationEditText"
            android:hint="@string/password_hint"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/emailField"
            style="@style/AuthenticationEditText"
            android:hint="@string/email_hint"
            android:inputType="textEmailAddress"/>

    </LinearLayout>

    <ImageView
        android:id="@+id/buttonDivider"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editTextLayout"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/content_desc_button_divider"
        android:src="@mipmap/button_divider"/>

    <Button
        android:id="@+id/signUpButton"
        style="@style/AuthenticationButton"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/editTextLayout"
        android:layout_marginRight="0dp"
        android:layout_toLeftOf="@id/buttonDivider"
        android:text="@string/sign_up_button_label"/>

    <Button
        android:id="@+id/cancelSignUpButton"
        style="@style/AuthenticationButton"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/editTextLayout"
        android:layout_marginLeft="0dp"
        android:layout_toRightOf="@id/buttonDivider"
        android:text="@string/cancel_sign_up_button_label"/>

</RelativeLayout>
