<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <item
        android:id="@+id/action_logout"
        android:orderInCategory="100"
        android:title="@string/menu_logout_label"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search_action"
        android:orderInCategory="100"
        android:title="@string/action_search"
        app:showAsAction="always"/>

    <item
        android:id="@+id/action_add_friends"
        android:icon="@mipmap/ic_action_add_friend"
        android:title="@string/menu_add_friend_label"
        app:showAsAction="always"/>

    <!--<item-->
        <!--android:id="@+id/action_camera"-->
        <!--android:icon="@mipmap/ic_photo_camera_white_24dp"-->
        <!--android:title="@string/menu_camera_label"-->
        <!--app:showAsAction="always"/>-->

    <item
        android:id="@+id/action_plot_route"
        android:icon="@mipmap/ic_directions_run_white_24dp"
        android:title="@string/plot_route_label"
        app:showAsAction="always"/>
</menu>
