<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                tools:context="com.khackett.runmate.MapsActivityDisplayRoute">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">


        <Button
            android:id="@+id/btn_decline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="2dp"
            android:layout_weight="1"
            android:background="#40ffffff"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/str_btn_decline"
            android:textColor="#0A0AFF"/>

        <Button
            android:id="@+id/btn_accept"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#40ffffff"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/str_btn_accept"
            android:textColor="#0A0AFF"/>

        <Button
            android:id="@+id/btn_animate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="#40ffffff"
            android:gravity="center_vertical|center_horizontal"
            android:text="@string/str_btn_animate"
            android:textColor="#0A0AFF"/>

    </LinearLayout>

    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@id/linearLayout"
        tools:context="com.khackett.runmate.MapsActivityDisplayRoute"/>

</RelativeLayout>