<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.khackett.runmate.MapsActivityTrackRun">


    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:orientation="horizontal">

        <Button
            android:id="@+id/start_updates_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="@dimen/ui_group_top_margin"
            android:layout_weight="1"
            android:onClick="startUpdatesButton"
            android:text="@string/start_updates"/>

        <Button
            android:id="@+id/stop_updates_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_marginTop="@dimen/ui_group_top_margin"
            android:layout_weight="1"
            android:enabled="false"
            android:onClick="stopUpdatesButton"
            android:text="@string/stop_updates"/>

        <TextView
            android:id="@+id/latitude_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/start_updates_button"
            android:layout_marginTop="@dimen/ui_group_top_margin"
            android:layout_weight="1"
            android:text="@string/latitude_label"
            android:textSize="@dimen/default_text_size"/>

        <TextView
            android:id="@+id/latitude_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/latitude_label"
            android:layout_marginLeft="@dimen/small_margin_left"
            android:layout_toRightOf="@+id/latitude_label"
            android:layout_weight="1"
            android:textSize="@dimen/default_text_size"/>

        <TextView
            android:id="@+id/longitude_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/latitude_label"
            android:layout_weight="1"
            android:text="@string/longitude_label"
            android:textSize="@dimen/default_text_size"/>

        <TextView
            android:id="@+id/longitude_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/longitude_label"
            android:layout_marginLeft="@dimen/small_margin_left"
            android:layout_toRightOf="@+id/longitude_label"
            android:layout_weight="1"
            android:textSize="@dimen/default_text_size"/>

        <TextView
            android:id="@+id/last_update_time_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/longitude_label"
            android:layout_weight="1"
            android:text="@string/last_update_time_label"
            android:textSize="@dimen/default_text_size"/>

        <TextView
            android:id="@+id/last_update_time_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBaseline="@+id/last_update_time_label"
            android:layout_marginLeft="@dimen/small_margin_left"
            android:layout_toRightOf="@+id/last_update_time_label"
            android:layout_weight="1"
            android:textSize="@dimen/default_text_size"/>

    </LinearLayout>


    <fragment
        android:id="@+id/map"
        android:name="com.google.android.gms.maps.SupportMapFragment"
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/linearLayout"
        tools:context="com.khackett.runmate.MapsActivityTrackRun"/>

</RelativeLayout>